--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
 <canvas id="canvas" style="display:none;"></canvas>
 
 <div class="help">
+<h2>REQUIREMENTS - You will need the following mods: </h2>
+<ul>
+<li>ComfySigns</li>
+<li>SnapPointsMadeEasy</li>
+<li>FenceSnap</li>
+<li>ComfyGizmo</li>
+</ul>
 <h2>Some important things to keep in mind.</h2>
 <ul>
 <li>REMEMBER TO TAKE BREAKS! This tool makes it very easy to get in a rhythm and just place sign after sign, which can easily trigger Repetitive Stress Injuries or Arthritis, so don't push yourself too hard. It's not a race ♥</li>
@@ -36,7 +43,7 @@
 </ul>
 <h2>Help! How do I use this tool?</h2>
 
-<p>There's some setup you'll need to do in order to use the code from this tool. You'll need a building hammer, wood and charcoal. You will also likely want <span class="emphasis">colorfulPieces</span> (for keeping track of which sign you're currently on), <span class="emphasis">Snap Points Made Easy</span> (Required for placing the fence posts that we'll use for creating the structure array), and <span class="emphasis">ComfyGizmo</span> (Which makes rotations easier but it's not required for this tool to work).</p>
+<p>There's some setup you'll need to do in order to use the code from this tool. You'll need a building hammer, wood and charcoal. You will also likely want <span class="emphasis">colorfulPieces</span> (for keeping track of which sign you're currently on), <span class="emphasis">Fence Snap</span> (Required for snapping Signs to the fence poles)<span class="emphasis">Snap Points Made Easy</span> (Required for placing the fence posts that we'll use for creating the structure array), and <span class="emphasis">ComfyGizmo</span> (Which makes rotations easier but it's not required for this tool to work). I also recommend using torches and/or just ensuring you're in a well lit area. Also, setting the wall behind your final image to be black or white may make it more visible.</p>
 <p>Make sure to configure Snap Points Made easy so that you can toggle the snap points. You'll want to be set to "Switched to Closest" for this project</p>
 <img id="spme">
 <p>You'll want to start by placing 6x 1m (small) wooden beams up, so that you have a pillar (if you're building into the ground, you'll need to dig out the space and then place your pillars down in a line, the rest of the process will remain the same). </p>
